EXTRA_DIST = \
    Account_Interface_Avatar.xml \
    Account_Manager.xml \
    Account.xml \
    all.xml \
    Channel_Future.xml \
    Channel_Handler.xml \
    Channel_Interface_Call_Merging.xml \
    Channel_Interface_Call_State.xml \
    Channel_Interface_Chat_State.xml \
    Channel_Interface_Delivery_Reporting.xml \
    Channel_Interface_DTMF.xml \
    Channel_Interface_Group.xml \
    Channel_Interface_Hold.xml \
    Channel_Interface_HTML.xml \
    Channel_Interface_Media_Signalling.xml \
    Channel_Interface_Messages.xml \
    Channel_Interface_Password.xml \
    Channel_Interface_Transfer.xml \
    Channel_Type_Contact_List.xml \
    Channel_Type_Contact_Search.xml \
    Channel_Type_Room_List.xml \
    Channel_Type_Streamed_Media.xml \
    Channel_Type_Text.xml \
    Channel_Type_Tubes.xml \
    Channel.xml \
    Connection_Interface_Aliasing.xml \
    Connection_Interface_Avatars.xml \
    Connection_Interface_Capabilities.xml \
    Connection_Interface_Contact_Info.xml \
    Connection_Interface_Forwarding.xml \
    Connection_Interface_Presence.xml \
    Connection_Interface_Privacy.xml \
    Connection_Interface_Renaming.xml \
    Connection_Manager.xml \
    Connection.xml \
    errors.xml \
    generic-types.xml \
    Media_Session_Handler.xml \
    Media_Stream_Handler.xml \
    Properties_Interface.xml
